deploy/application/overlays/production/patch-backend-api-scheduling.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: noteverse-backend-api
spec:
  template:
    spec:
      nodeSelector:
        noteverse.io/model-cache: enabled
