deploy/application/overlays/production/patch-production-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: noteverse-backend-api
spec:
  template:
    spec:
      containers:
        - name: api
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: "2"
              memory: 2Gi
apiVersion: apps/v1
kind: Deployment
metadata:
  name: noteverse-customer-web
spec:
  template:
    spec:
      containers:
        - name: customer-web
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: "2"
              memory: 2Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: noteverse-backend-beat
spec:
  template:
    spec:
      containers:
        - name: beat
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 1Gi
